# telegram_bots

./: .gitignore  extractYouTubeSubtitlesBot.py  pyproject.toml  requirements.txt  unfoldAndCleanURLsBot.py  utils.py
tb_utils/: extractYouTubeSubtitlesBotUtils.py  unfoldAndCleanURLsBotUtils.py  utils.py
util/: extractYouTubeSubtitlesBotUtil.py  shared.py
