[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"
aiohttp = ">=3.8.3"
asyncio = ">=3.4.3"
configparser = ">=5.3.0"
pyTelegramBotAPI = ">=4.14.0"
telebot = ">=0.0.4"
dot-dict = {path = "../dot-dict/", develop = true}
journal-logger = {path = "../journal-logger/", develop = true}
url-unescape = {path = "../url_tools/url_unescape/", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
