[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
aiohttp = "^3.13.3"
asyncio = "^4.0.0"
configparser = "^7.2.0"
pyTelegramBotAPI = "^4.30.0"
telebot = "^0.0.5"
youtube-transcript-api = "^1.2.3"
dot-dict = {path = "../dot-dict/", develop = true}
journal-logger = {path = "../journal-logger/", develop = true}
url-unescape = {path = "../url_tools/url_unescape/", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
